--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./src/assets/images/smallLogo.1c6479f7.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RustyLootGG - Mock</title>
+    <title>RustyLootGG</title>
   </head>
   <body>
     <div id="root"></div>
